--- a/DragonBoating/app/src/main/res/layout/activity_timer.xml
+++ b/DragonBoating/app/src/main/res/layout/activity_timer.xml
@@ -83,4 +83,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvSetCount"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvMillis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvTimer"
+        app:layout_constraintStart_toEndOf="@+id/tvTimer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
