--- a/DragonBoating/app/src/main/res/layout/activity_main.xml
+++ b/DragonBoating/app/src/main/res/layout/activity_main.xml
@@ -113,23 +113,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sbTime3" />
 
-    <TextView
-        android:autoSizeTextType="uniform"
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="32dp"
-        android:text="@string/main_title"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <SeekBar
         android:id="@+id/sbTime1"
         android:layout_width="0dp"
@@ -287,18 +270,19 @@
         app:layout_constraintTop_toTopOf="@+id/textView3" />
 
     <TextView
-        android:autoSizeTextType="uniform"
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
+        android:layout_marginTop="24dp"
         android:layout_marginBottom="8dp"
+        android:autoSizeTextType="uniform"
         android:text="@string/time_1"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/sbTime1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/sSound" />
 
     <Button
         android:id="@+id/button4"
@@ -331,7 +315,7 @@
         app:layout_constraintBottom_toTopOf="@+id/time1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/time1"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="@+id/sSound" />
 
     <TextView
         android:autoSizeTextType="uniform"
@@ -345,5 +329,17 @@
         app:layout_constraintBottom_toBottomOf="@+id/etSet"
         app:layout_constraintEnd_toStartOf="@+id/etSet"
         app:layout_constraintTop_toTopOf="@+id/etSet" />
+
+    <Switch
+        android:id="@+id/sSound"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/sound_setting"
+        app:layout_constraintEnd_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
